# fosslight-guide-en

./: README.md  _config.yml
_includes/extra/: my-inline.scss  styles.scss
_site/: 404.html  data.json  ignored.yml  index.html  robots.txt  search.html  sitemap.xml  sw.caches.js
_site/android/: index.html
_site/prechecker/: index.html
_site/scanner/: 1_dependency.html  2_source.html  3_binary.html  index.html
_site/scanner_service/: index.html
_site/yocto/: index.html
about/: README.md
android/: README.md
contribution/: 1_contribution.md
features/: 1_developer.md  1_rest_api.md  2_rest_api.md  3_maintenance.md  README.md
learn/: 1_contribution.md  1_developer.md  1_devloper.md  2_contribution.md  2_fosslight_report.md  README.md
learn/files/: FOSSLight-Report_v1.0.xlsx
prechecker/: README.md
run/: 1_analyze.md  2_check.md  README.md
scanner/: 1_dependency.md  1_prechecker.md  1_reuse.md  1_source.md  2_dependency.md  2_source.md  3_binary.md  3_dependency.md  3_reuse.md  4_binary.md  5_yocto.md  6_android.md  7_scanner_service.md  README.md
scanner/etc/: README.md  binary_db.md  (+2 more)
scanner_service/: README.md
started/: 1_install.md  README.md
tutorial/: 1_project.md  2_self_check.md  README.md
use/: 1_analyze.md  2_result.md  README.md
use/result_files/scan/downloads/PyPI/unknown/importlib-metadata/2.1.0/importlib_metadata-2.1.0/: PKG-INFO  setup.cfg
use/result_files/scan/downloads/PyPI/unknown/importlib-metadata/2.1.0/importlib_metadata-2.1.0/importlib_metadata.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
yocto/: README.md
(+67 files in other folders)
