[metadata]
name = importlib_metadata
author = Jason R. Coombs
author_email = jaraco@jaraco.com
url = http://importlib-metadata.readthedocs.io/
description = Read metadata from Python packages
long_description = file: README.rst
license = Apache Software License
classifiers = 
	Development Status :: 3 - Alpha
	Intended Audience :: Developers
	License :: OSI Approved :: Apache Software License
	Topic :: Software Development :: Libraries
	Programming Language :: Python :: 3
	Programming Language :: Python :: 2

[options]
python_requires = >=2.7,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*,!=3.4.*
setup_requires = setuptools-scm
install_requires = 
	zipp>=0.5
	pathlib2; python_version < '3'
	contextlib2; python_version < '3'
	configparser>=3.5; python_version < '3'
packages = importlib_metadata

[mypy]
ignore_missing_imports = True
strict_optional = False

[wheel]
universal = 1

[options.extras_require]
testing = 
	importlib_resources>=1.3; python_version < "3.9"
	packaging
	pep517
	unittest2; python_version < "3"
docs = 
	sphinx
	rst.linker

[egg_info]
tag_build = 
tag_date = 0

